# openburn

./: AGENTS.MD  README.md  copy-bundled.cjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/accounts/: accounts.example.json  accounts.md
docs/providers/: providers.md
scripts/: build-release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_store.rs  app_nap.rs  auth.rs  error.rs  lib.rs  models.rs  oauth.rs  panel.rs  probe.rs  secrets.rs  tray.rs  utils.rs  webkit_config.rs
src-tauri/src/provider_clients/: antigravity.rs  claude.rs  codex.rs  copilot.rs  mod.rs  zai.rs
src-tauri/src/providers/: common.rs  contract.rs  descriptor.rs  mod.rs  registry.rs  runtime.rs  usage.rs  validation.rs
src-tauri/src/providers/antigravity/: client.rs  mod.rs  probe.rs
src-tauri/src/providers/claude/: client.rs  mod.rs  probe.rs
src-tauri/src/providers/codex/: client.rs  mod.rs  probe.rs
src-tauri/src/providers/copilot/: client.rs  mod.rs  probe.rs
src-tauri/src/providers/opencode/: client.rs  mod.rs  probe.rs
src-tauri/src/providers/zai/: client.rs  mod.rs  probe.rs
src/components/: about-dialog.tsx  panel-footer.tsx  provider-accounts-section.tsx  provider-card.tsx  provider-error.tsx  side-nav.tsx  skeleton-lines.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  progress.tsx  tooltip.tsx
src/hooks/: use-app-update.ts  use-dark-mode.ts  use-now-ticker.ts  use-probe-events.ts
src/lib/: account-scoped-label.ts  accounts.ts  analytics.ts  color.ts  pace-status.ts  pace-tooltip.ts  provider-types.ts  settings.ts  snapshots.ts  tray-bars-icon.ts  tray-primary-progress.ts  utils.ts
src/pages/: overview.tsx  provider-detail.tsx  settings.tsx
